--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  animate_do: ^4.2.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  go_router: ^14.8.1
   math_expressions: ^2.7.0
 
 dev_dependencies:
